# kuakuaBot

./: .gitignore  .gitmodules  README.md  playground.py  requirements.txt
documentAssets/: 2025-02-09 关于 Q 群机器人的独立问答.md  2025-02-10 deepseek 提问时记住历史问答.md  2025-02-10 储存qq聊天数据格式.md  deepseekQ&A.md  (+1 more)
dummy/: README.md  (+1 more)
kuakuaBot/: .env.prod  README.md  pyproject.toml
kuakuaBot/plugins/alconna_send_voiceline/: __init__.py
kuakuaBot/plugins/artale/: __init__.py  message_filter.py  smega_getter.py
kuakuaBot/plugins/ask_deepseek/: __init__.py  config.py  kuakua.py  prompt.py  utils.py
kuakuaBot/plugins/bilibili_streaming_notification/: __init__.py
kuakuaBot/plugins/cat_praiser/: __init__.py
kuakuaBot/plugins/catms_boss_notifier/: __init__.py
kuakuaBot/plugins/catms_boss_recruiter/: __init__.py  recruiter_redis.py
kuakuaBot/plugins/content_echo/: __init__.py  config.py  redis_handler.py
kuakuaBot/plugins/dice_result_possibility/: __init__.py
kuakuaBot/plugins/group_chat_saver/: __init__.py
kuakuaBot/plugins/group_chat_saver/redis/: chatsaver.py
kuakuaBot/plugins/group_chat_saver/redis/docker/: Dockerfile  build_image.sh  redis.conf  run_docker_contianer.sh
kuakuaBot/plugins/hachimi_ha/: __init__.py
kuakuaBot/plugins/marriage/: __init__.py
kuakuaBot/plugins/pm_collect_info/: __init__.py
kuakuaBot/plugins/repeater/: __init__.py
kuakuaBot/plugins/tarot/: __init__.py  tarot_deck.py
kuakuaBot/plugins/tarot/reference/: constants.py  tarotAPI.py
kuakuaBot/plugins/valhalla/: __init__.py
kuakuaBot/plugins/xiaomao_streaming_countdown/: __init__.py
