[project]
name = "kuakuaBot"
version = "0.1.0"
description = "kuakuaBot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_cocdicer", "nonebot_plugin_apscheduler", "nonebot_plugin_what2eat"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
